--- a/src/app/@theme/layouts/one-column/one-column.layout.scss
+++ b/src/app/@theme/layouts/one-column/one-column.layout.scss
@@ -12,4 +12,13 @@
     --menu-text-color: #ffffff;
     --menu-group-text-color: #fff;
   }
+
+  .imagem {
+    display: flex;
+    margin-left: 50px;
+    width: 60px;
+    height: 76px;
+    top: 10px;
+    left: 91px;  
+  }
 }
