--- a/src/app/pages/cadastro/cadastro-medico/cadastro-medico.component.scss
+++ b/src/app/pages/cadastro/cadastro-medico/cadastro-medico.component.scss
@@ -30,5 +30,12 @@ nb-checkbox {
   height: 670px;
 }
 
+.multiple{
+  display: flex;
+  border-radius: 10px;
+  width: 260px;
+  background-size:5px 5px, 5px 5px, 1px 2.5em;
+}
+
 
 
