--- a/src/app/pages/cadastro/cadastro-medico/cadastro-medico.component.html
+++ b/src/app/pages/cadastro/cadastro-medico/cadastro-medico.component.html
@@ -25,12 +25,13 @@
                   <div *ngIf="isInfoGerais">
                     <div class="form-group">
                       <h6>Cadastro</h6>
-                    </div>
-                    <div class="form-group">
-                      <img src="assets/images/img_teste_medico.png" />
-                    </div>
-                    <div class="form-group" id="formFooter">
-                      <a class="btn underlineHover" role="button">Editar Foto</a>
+                    </div>                   
+                    <div class="form-group row pl-3">
+                      <div class="col-md-5">
+                        <label for="imgem">Adcione sua foto</label>
+                        <input class="form-control-file media-body" name="imgem" id="imgem" type="file" formControlName="imgem" 
+                        (change)="converterImagem($event, $event.target)" value="imagem"/>
+                      </div>                     
                     </div>
                     <div class="form-group row pl-3">
                       <div class="col-md-3">
@@ -57,17 +58,16 @@
                             formControlName="dataNascimento" maxlength="10" />
                         </div>
                       </div>
-                      <div class="form-group col-md-4">
-                        <!--<label for="nome">Especialidade*</label>
-                        <select class="form-control" formControlName="especialidade">
-                          <option value="null" selected>SELECIONE</option>
-                          <option *ngFor="let especialidade of listEspecialidade" value="{{ especialidade.especialidade }}">{{
-                            especialidade.descricao}}</option>
-                        </select>     -->
-                        <!--<div class="card flex justify-content-center">
-                          <p-multiSelect [options]="cities" [(ngModel)]="selectedCities2" defaultLabel="Select a City"
-                            optionLabel="name" display="chip"></p-multiSelect>
-                        </div>-->
+                      <div class="col-md-6">
+                        <label for="nome">Especialidade*</label>
+                        <div class="row">
+                          <div class="form-group">
+                            <nb-select class="multiple" multiple placeholder="SELECIONE" formControlName="especialidade">
+                              <nb-option *ngFor="let especialidade of listEspecialidade" value="{{ especialidade.id }}">{{
+                                especialidade.name }}</nb-option>
+                            </nb-select>
+                          </div>                          
+                        </div>
                       </div>
                     </div>
                     <div class="form-group">
@@ -104,18 +104,22 @@
                           mask="(00) 0 0000-0000 || (00) 0000-0000" maxlength="16" />
                       </div>
                       <div class="col-md-4">
-                        <label for="cidade">Cidade*</label>
-                        <input class="form-control" name="cidade" id="cidade" type="text" formControlName="cidade"
-                          [dropSpecialCharacters]="true" />
-                      </div>
+                        <label for="estado">Estado</label>
+                        <select class="form-control" formControlName="estado"
+                        (change)="buscaCidade($event.target.value)">
+                          <option value="null" selected>SELECIONE</option>
+                          <option *ngFor="let estado of listEstado" value="{{ estado.id }}">{{
+                            estado.description}}</option>
+                        </select>
+                      </div>                      
                     </div>
                     <div class="form-group row pl-3">
                       <div class="col-md-4">
-                        <label for="estado">Estado</label>
-                        <select class="form-control" formControlName="estado">
+                        <label for="cidade">Cidade</label>
+                        <select class="form-control" formControlName="cidade">
                           <option value="null" selected>SELECIONE</option>
-                          <option *ngFor="let estado of listEstado" value="{{ estado.estado }}">{{
-                            estado.description}}</option>
+                          <option *ngFor="let cidade of listCidade" value="{{ cidade.id }}">{{
+                            cidade.description}}</option>
                         </select>
                       </div>
                       <div class="col-md-4">
@@ -155,7 +159,7 @@
                       <div class="col-md-4">
                         <label for="confirmaEmail">Confirma e-mail</label>
                         <input class="form-control" name="confirmaEmail" id="confirmaEmail" type="text"
-                          formControlName="confirmaEmail" maxlength="50" />
+                          formControlName="confirmaEmail" maxlength="50" (change)="verificarEmail(formCadastroMedico.value)"/>
                       </div>
                     </div>
                     <div class="form-group row pl-3">
@@ -166,7 +170,7 @@
                       <div class="col-md-4">
                         <label for="confirmaSenha">Confirma a senha</label>
                         <input class="form-control" name="confirmaSenha" id="confirmaSenha" type="password"
-                          formControlName="confirmaSenha" maxlength="50" />
+                          formControlName="confirmaSenha" maxlength="50" (change)="verificarPassWord(formCadastroMedico.value)"/>
                       </div>
                     </div>
                     <div class="form-group">
@@ -177,17 +181,17 @@
                           <a href="#" target="_blank"> os Termos e condições </a>
                         </div>
                       </div>
-                    </div>                    
+                    </div>
                     <div class="text-right">
                       <button class="btn btn-primary m-2" (click)="voltar()">
                         VOLTAR
                       </button>
-                      <button class="btn btn-primary m-2" (click)="cadastro(formCadastroMedico.value)">
+                      <button class="btn btn-success m-2" (click)="cadastro(formCadastroMedico.value)">
                         CADASTRAR
                       </button>
                     </div>
                   </div>
-                </div>                
+                </div>
                 <div class="col-md-1">
                   <div class="align-self-start">
                     <img class="cadastro" src="assets/images/linhas_cadastro.png" />
