--- a/src/app/pages/configurar-agenda/configurar-excecao-atendimento/configurar-excecao-atendimento.component.html
+++ b/src/app/pages/configurar-agenda/configurar-excecao-atendimento/configurar-excecao-atendimento.component.html
@@ -11,10 +11,11 @@
                 <div class="form-group col-md-4">
                   <div class="form-group">
                     <label for="nome">Escolha o médico a ser consultado</label>
-                    <select class="form-control" formControlName="medico">
+                    <select class="form-control" formControlName="medico"
+                    (change)="verificaMedico($event.target.value)">
                       <option value="null" selected>SELECIONE</option>
-                      <option *ngFor="let medico of listMedico" value="{{ medico.medico }}">{{
-                        medico.descricao}}</option>
+                      <option *ngFor="let medico of listMedico" value="{{ medico.id }}">{{
+                        medico.name}}</option>
                     </select>
                   </div>
                 </div>
@@ -85,20 +86,74 @@
                     </form>
                   </div>
                 </section>
-              </nb-card-body>
+              </nb-card-body>              
               <div class="form-row align-items-center">
                 <div class="form-group col-md-12">
                   <nb-card>
                     <nb-card-body>
-                      <div class="form-row align-items-center">
-                        <div class="form-group col-md-12">
-                          <ng2-smart-table [settings]="settings" [source]="source"> </ng2-smart-table>
-                        </div>
+                      <div class="app-box">
+                        <ngx-datatable #myTable class="bootstrap" [rows]="rowData" [columnMode]="'force'"
+                          [headerHeight]="35" [footerHeight]="50" [rowHeight]="'auto'"
+                          [messages]="{emptyMessage: 'Sem dados...'}" [limit]="8">
+  
+                          <ngx-datatable-column name="Nome" prop="nome">
+                            <ng-template ngx-datatable-cell-template let-row="row">
+                              <div class="text-center">
+                                {{ row.nome }}
+                              </div>
+                            </ng-template>
+                          </ngx-datatable-column>
+                          <ngx-datatable-column name="Data" prop="data">
+                            <ng-template ngx-datatable-cell-template let-row="row">
+                              <div class="text-center">
+                                {{ row.data }}
+                              </div>
+                            </ng-template>
+                          </ngx-datatable-column>
+                          <ngx-datatable-column name="Hora Início" prop="horaInicio">
+                            <ng-template ngx-datatable-cell-template let-row="row">
+                              <div class="text-center">
+                                {{ row.horaInicio }}
+                              </div>
+                            </ng-template>
+                          </ngx-datatable-column>
+                          <ngx-datatable-column name="Hora Fim" prop="horaFim">
+                            <ng-template ngx-datatable-cell-template let-row="row">
+                              <div class="text-center">
+                                {{ row.horaFim }}
+                              </div>
+                            </ng-template>
+                          </ngx-datatable-column>   
+                          <ngx-datatable-footer>
+                            <ng-template ngx-datatable-footer-template let-rowCount="rowCount" let-pageSize="pageSize"
+                              let-selectedCount="selectedCount" let-curPage="curPage" let-offset="offset">
+                              <div>
+                                <div class="page-count">
+                                  Total de Registros: {{rowCount}}
+                                </div>
+                              </div>
+                              <datatable-pager [pagerLeftArrowIcon]="'fa fa-angle-double-left'"
+                                [pagerRightArrowIcon]="'fa fa-angle-double-right '"
+                                [pagerPreviousIcon]="'fa fa-angle-left'" [pagerNextIcon]="'fa fa-angle-right '"
+                                [page]="curPage" [size]="pageSize" [count]="rowCount"
+                                [hidden]="!((rowCount / pageSize) > 1)" (change)="myTable.onFooterPage($event)">
+                              </datatable-pager>
+                            </ng-template>
+                          </ngx-datatable-footer>
+                        </ngx-datatable>
                       </div>
                     </nb-card-body>
                   </nb-card>
                 </div>
-              </div>              
+              </div>  
+              <div class="row" *ngIf="isActive" class="loader">
+                <div class="text-center" style="margin-top: -300px;margin-right: 40px;">
+                  <button class="btn btn-primary" type="button" disabled>
+                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                    Carregando...
+                  </button>
+                </div>
+              </div>          
             </div>
           </form>
         </div>     
