--- a/src/app/pages/configurar-agenda/parametrizar-consulta/parametrizar-consulta.component.html
+++ b/src/app/pages/configurar-agenda/parametrizar-consulta/parametrizar-consulta.component.html
@@ -23,8 +23,8 @@
                       <label for="nome">Escolha o médico a ser consultado</label>
                       <select class="form-control" formControlName="medico">
                         <option value="null" selected>SELECIONE</option>
-                        <option *ngFor="let medico of listMedico" value="{{ medico.medico }}">{{
-                          medico.descricao}}</option>
+                        <option *ngFor="let medico of listMedico" value="{{ medico.id }}">{{
+                          medico.name}}</option>
                       </select>
                     </div>
                   </div>
@@ -136,6 +136,14 @@
                 SALVAR
               </button>
             </div>
+            <div class="row" *ngIf="isActive" class="loader">
+              <div class="text-center" style="margin-top: -300px;margin-right: 40px;">
+                <button class="btn btn-primary" type="button" disabled>
+                  <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                  Carregando...
+                </button>
+              </div>
+            </div>     
           </form>
         </div>     
     </div>
